# bm25

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: pre-merge.yml  release.yml
benches/: embedder.rs  search.rs
data/: README.md  recipes_de.csv  recipes_en.csv
snapshots/: bm25__default_tokenizer__tests__it_matches_snapshot_de.snap  bm25__default_tokenizer__tests__it_matches_snapshot_en.snap  bm25__embedder__tests__it_matches_snapshot_de.snap  bm25__embedder__tests__it_matches_snapshot_en.snap  bm25__search__tests__it_matches_snapshot_de.snap  bm25__search__tests__it_matches_snapshot_en.snap  bm25__tokenizer__tests__it_matches_snapshot.snap  bm25__tokenizer__tests__it_matches_snapshot_de.snap  bm25__tokenizer__tests__it_matches_snapshot_en.snap
src/: default_tokenizer.rs  embedder.rs  lib.rs  scorer.rs  search.rs  test_data_loader.rs  tokenizer.rs
